--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
             </div>
         </section>
     </main>    
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
