--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de tarefas</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./cssTailwind/output.css">
 </head>
 <body>
-    <main>
+    <main class="">
         <section>
             <div>
                 <label for="adicionandoTarefa">Adicione uma tarefa</label>
